--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@ body {
   display: inline-flex;
   justify-content: space-between;
   width: 100vw;
+  position: fixed;
+  z-index: 1000;
 }
 
 h1 {
@@ -30,7 +32,6 @@ h1 {
 }
 
 nav {
-  
   padding: 20px;
   width: 80px;
   display: flex;
@@ -38,6 +39,7 @@ nav {
   justify-content: center;
   border-radius: 3px;
   transition: width 0.6s linear;
+  overflow-x: hidden;
 }
 
 nav.active {
@@ -114,9 +116,19 @@ nav.active .icon .line2 {
 }
 
 .climber {
-  width: 40%;
+  height: 25vh;
   display: inline-block;
-  position: absolute;
-  top: 50%;
-  left: calc(50% - 15px);
+  position: fixed;
+  bottom: 15%;
+  left: 50%;
+  transform: translate(-100%, 0%);
+  z-index: 900;
+}
+
+.climber img {
+  height: 100%;
+}
+
+.cliff {
+  float: right;
 }
