--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,13 @@
 body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
-  height: 150vh;
+  overflow: hidden;
   background-color: #8bd5f7;
   background-image: linear-gradient(to bottom right, #8bd5f7, #416788);
+}
+
+.container{
+  overflow: auto;
 }
 
 .header {
