--- a/src/App.css
+++ b/src/App.css
@@ -135,4 +135,31 @@ nav.active .icon .line2 {
 
 .cliff {
   float: right;
+  height: 300vh;
+}
+
+.box {
+  background-color: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  transform: translateX(400%);
+  transition: transform 0.5s ease;
+}
+
+/* .box:nth-of-type(even) {
+  transform: translateX(-400%);
+} */
+
+.box.show {
+  transform: translateX(150%);
+}
+
+.box h2 {
+  font-size: 45px;
 }
