--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 
 .scrollContainer {
   overflow: auto;
+  position: relative;
   transition: transform 0.2s ease;
 }
 
@@ -142,6 +143,19 @@ nav.active .icon .line2 {
   float: right;
   background: linear-gradient(to top, orange, green);
   height: 500vh;
+}
+
+.grass {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.grass img {
+  height: 25px;
+  width: 25px;
 }
 
 .content {
