--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
-  overflow: hidden;
   background-color: #8bd5f7;
   background-image: linear-gradient(to bottom right, #8bd5f7, #416788);
 }
@@ -18,7 +17,9 @@ body {
 
 .scrollContainer {
   overflow: auto;
-  position: relative;
+  position: fixed;
+  left: 0;
+  width: 100%;
   transition: transform 0.2s ease;
 }
 
