--- a/src/App.css
+++ b/src/App.css
@@ -126,11 +126,11 @@ nav.active .icon .line2 {
 }
 
 .climber {
-  height: 25vh;
+  height: 30vh;
   display: inline-block;
   position: fixed;
   bottom: 15%;
-  left: 50%;
+  left: 55%;
   transform: translate(-100%, 0%);
   z-index: 900;
 }
@@ -140,9 +140,31 @@ nav.active .icon .line2 {
 }
 
 .cliff {
-  float: right;
-  background: linear-gradient(to top, orange, green);
-  height: 500vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.cliff img {
+  width: 60%;
+}
+
+.btn {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
+  font-family: inherit;
+  font-weight: 800;
+  font-size: 40px;
+  cursor: pointer;
+  display: inline-block;
+  padding: 40px 80px;
+  border: none;
+  border-radius: 60px;
+  position: absolute;
+  bottom: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  z-index: 900;
 }
 
 .grass {
