--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,19 @@ nav.active .icon .line2 {
   transform: rotate(765deg) translateY(-5.5px);
 }
 
+.romy-top {
+  height: 30vh;
+  display: inline-block;
+  position: absolute;
+  top: 5.9%;
+  right: 25%;
+  z-index: 900;
+}
+
+.romy-top img {
+  height: 100%;
+}
+
 .climber {
   height: 30vh;
   display: inline-block;
@@ -136,6 +149,19 @@ nav.active .icon .line2 {
 }
 
 .climber img {
+  height: 100%;
+}
+
+.romy-bottom {
+  height: 30vh;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 5%;
+  z-index: 900;
+}
+
+.romy-bottom img {
   height: 100%;
 }
 
@@ -185,7 +211,7 @@ nav.active .icon .line2 {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   position: absolute;
   left: 0;
   top: 0;
