--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 
 .scrollContainer {
   overflow: auto;
+  overflow-x: hidden;
   position: fixed;
   left: 0;
   width: 100%;
@@ -138,11 +139,46 @@ nav.active .icon .line2 {
   height: 100%;
 }
 
+.birds-left {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  bottom: 3700px;
+}
+
+.birds-left img {
+  height: 100%;
+}
+
+.birds-right {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  transform: scaleX(-1);
+  bottom: 2000px;
+  /* transform: translateX(2000%);
+  transition: transform 1.5s ease; */
+}
+
+.birds-right img {
+  height: 100%;
+}
+
+.balloon {
+  position: absolute;
+  height: 600px;
+  bottom: 2200px;
+}
+
+.balloon img {
+  height: 100%;
+}
+
 .climber {
   height: 35vh;
   display: inline-block;
   position: fixed;
-  bottom: 15%;
+  top: 50vh;
   left: 55%;
   transform: translate(-100%, 0%);
   z-index: 900;
