--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,24 @@ nav.active .icon .line2 {
   }
 }
 
+.spaceship {
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  left: -200px;
+  top: 500px;
+  transform: translateX(-100%);
+  transition: transform 0.5s linear;
+}
+
+.spaceship.show {
+  transform: translateX(200%);
+}
+
+.spaceship img {
+  height: 100%;
+}
+
 .climber {
   height: 35vh;
   display: inline-block;
