--- a/src/App.css
+++ b/src/App.css
@@ -420,31 +420,10 @@ nav.active .icon .line2 {
   align-items: center;
   justify-content: center;
   width: 550px;
-  height: 200px;
   margin: 200px;
   border-radius: 10px;
   transform: translateX(200%);
   transition: transform 0.5s ease;
-}
-
-.box.work {
-  width: 550px;
-  height: 600px;
-}
-
-.box.education {
-  width: 550px;
-  height: 350px;
-}
-
-.box.ztm {
-  width: 550px;
-  height: 400px;
-}
-
-.box.project-course {
-  width: 550px;
-  height: 300px;
 }
 
 /* .box:nth-of-type(even) {
@@ -466,7 +445,7 @@ nav.active .icon .line2 {
   text-align: center;
   justify-content: center;
   align-items: center;
-  padding: 0;
+  padding: 5px;
   margin: 0;
 }
 
